chore(docs): update Swagger server URL to https://simple-pos-api.onrender.com/
